dart_rack_new/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.16', folder: 'D:\Software\Keil_5\ARM\ARMCLANG\Bin'
Build target 'dart_rack_new_2023_7_1'
../task/launch_thread.c(39): error: expected ';' after top level declarator
int16_t tim_bottom_compare = 150
                                ^
                                ;
1 error generated.
compiling launch_thread.c...
"dart_rack_new_2023_7_1\dart_rack_new_2023_7_1.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
